--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
         <ul>
             <li><a href="#dienstleistungen">Meine Dienstleistungen</a></li>
+            <li><a href="#kontakt">Kontakt</li>
             <li><a href="#about">Über mich</a></li>
             <li><a href="#preise">Preise</a></li>
         </ul>
@@ -22,9 +23,9 @@
         <section id="dienstleistungen">
             <h2>Meine Dienstleistungen</h2>
             <p>
-                Ich biete Ihnen meine Stickdienstleistungen an. Unten sehen Sie einige Beispiele möglicher Stickereien, aber 
-                Sie können auch ein Motiv auswählen und mir zuschicken, ich sticke es für Sie. Außerdem sticke ich auch Vornamen 
-                mit einem personalisierbaren Schriftstil.
+                Ich biete Ihnen meine Stickdienstleistungen an. Unten sehen Sie einige Beispiele möglicher Stickereien. Sie 
+                können aber auch ein eigenes Motiv auswählen und mir per WhatsApp zuschicken - ich sticke es gerne für Sie. 
+                Außerdem sticke ich auch Namen in einem personalisierbarben Schriftstil.
             </p>
             <div class="image-container">
                 <img src="fleurs.jpg" alt="Fleurs" width="300" height="300">
@@ -32,6 +33,14 @@
             </div>
         </section>
 
+        <section id="kontakt">
+            <h2>Kontakt</h2>
+            <p>
+                Schreiben Sie mir einfach über WhatsApp unter : 0170 2433365<br>
+               Ich freue mich auf Ihre Nachricht !
+            </p>
+        </section>
+            
         <section id="about">
             <h2>Über mich</h2>
             <p>
@@ -43,11 +52,11 @@
             <h2>Preise</h2>
             <p>
                 Sie haben zwei Möglichkeiten:<br><br>
-                Die erste ist, dass Sie Ihre eigene Leinwand mitbringen und sie an der Rezeption vorzeigen, damit sie registriert wird. 
-                Danach können Sie mich im Geschäft besuchen.<br>
-                Die zweite ist, dass Sie eine Leinwand von Globus auswählen und mir diese bringen. Ich sticke dann auf dieser Leinwand und 
-                Sie bezahlen beim Verlassen des Geschäfts.<br>
-                Ich berechne nach der Größe der gewünschten Stickerei.
+                1.  Sie bringen Ihre eigenen Handtücher mit und zeigen sie an der information vor, damit sie gekennzeichnet
+                werden. Danach können Sie mich im Geschäft besuchen.<br>
+                2.  Sie wählen ein Handtuch bei Globus aus und bringen es zu mir. Ich besticke das Handtuch für Sie. Die 
+                Stickerei bezahlen Sie bei mir, das Handtuch an der Klasse.<br>
+                Die Preise berechne ich je nach Größe der gewünschten Stickerei. 
             </p>
         </section>
 
@@ -56,5 +65,6 @@
     <footer>
         <p>&copy; Bianca DECKER. Alle Rechte vorbehalten</p>
     </footer>
+    
 </body>
 </html>
