--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     </nav>
     <main>
         <section id="about">
+            <h2>Über mich</h2>
                 <section id="dienstleistungen">
-                    <h2>Meine Dienstleistungen</h2>
+                    <h3>Meine Dienstleistungen</h3>
                     <p>
                         Ich biete Ihnen meine Stickdienstleistungen an. Unten sehen Sie einige Beispiele möglicher Stickereien. Sie 
                         können aber auch ein eigenes Motiv auswählen und mir per WhatsApp zuschicken - ich sticke es gerne für Sie. 
@@ -34,7 +35,7 @@
                 </section>
         
                 <section id="kontakt">
-                    <h2>Kontakt</h2>
+                    <h3>Kontakt</h3>
                     <p>
                         Schreiben Sie mir einfach über WhatsApp unter : 0170 2433365<br>
                        Ich freue mich auf Ihre Nachricht !
